daylight-equation/fixtures/daylight-v06-m1/vectors/negative/N20_missing_required_log/auth_block.cbor.hex
a30081a200584011f3322ad775dd273a9f9325e571dc4a568c5e4f84b045f9c4bf5b1166111c283b7fe04f5a351da6b669c550a187493963ea136efeeeafaa95f8bbe28d263ae301584037a6b87991fe5ec1a9a0fe9201a25c81fe7ed0e497fec11c12e21404c0cdd1cf2b42db54a0679643c34b9c43e2ce393cfca70278b9d67209115e67662c28a6d601f602f6
